tests/ui/macros/suggest-enclosing-format-string.stderr
error: format argument must be a string literal
  --> $DIR/suggest-enclosing-format-string.rs:11:14
   |
LL |     println!({}, UwU::QwQ);
   |              ^^
   |
help: you might be missing a string literal to format with
   |
LL |     println!("{:?} {}", {}, UwU::QwQ);
   |              ++++++++++
help: you might want to enclose `{}` with `""`
   |
LL -     println!({}, UwU::QwQ);
LL +     println!("{}", UwU::QwQ);
   |

error: expected expression, found `:`
  --> $DIR/suggest-enclosing-format-string.rs:15:15
   |
LL |     println!({:?}, UwU::QwQ);
   |               ^ expected expression
   |
help: maybe write a path separator here
   |
LL |     println!({::?}, UwU::QwQ);
   |                +

error: format argument must be a string literal
  --> $DIR/suggest-enclosing-format-string.rs:15:14
   |
LL |     println!({:?}, UwU::QwQ);
   |              ^^^^
   |
help: you might be missing a string literal to format with
   |
LL |     println!("{} {}", {:?}, UwU::QwQ);
   |              ++++++++
help: you might want to enclose `{:?}` with `""`
   |
LL -     println!({:?}, UwU::QwQ);
LL +     println!("{:?}", UwU::QwQ);
   |

error: expected expression, found `:`
  --> $DIR/suggest-enclosing-format-string.rs:21:15
   |
LL |     println!({:#?}, UwU::QwQ);
   |               ^ expected expression
   |
help: maybe write a path separator here
   |
LL |     println!({::#?}, UwU::QwQ);
   |                +

error: format argument must be a string literal
  --> $DIR/suggest-enclosing-format-string.rs:21:14
   |
LL |     println!({:#?}, UwU::QwQ);
   |              ^^^^^
   |
help: you might be missing a string literal to format with
   |
LL |     println!("{} {}", {:#?}, UwU::QwQ);
   |              ++++++++
help: you might want to enclose `{:#?}` with `""`
   |
LL -     println!({:#?}, UwU::QwQ);
LL +     println!("{:#?}", UwU::QwQ);
   |

error: aborting due to 5 previous errors

